# qr_reader

./: README.md  pyproject.toml
src/qr_reader/: __main__.py  qr_reader.py
